# cpp-snippets

./: .gitignore  README.md  optional.cpp
algorithms/: CMakeLists.txt
algorithms/data_structures/: binary_counter.hpp  binary_counter_test.cpp  linked_list.hpp  linked_list_test.cpp  list_pool.hpp  list_pool_test.cpp  matrix.hpp  matrix_test.cpp
algorithms/graphs/union_find/: quick_find.hpp  quick_find_test.cpp  quick_union.hpp  quick_union_test.cpp  union_find_base.hpp
algorithms/numeric/: minmax.hpp  minmax_test.cpp  sqrt.hpp  sqrt_test.cpp
algorithms/optimization/: knapsack.hpp  knapsack_test.cpp
algorithms/search/: binary_search.hpp  binary_search_test.cpp
algorithms/sorting/: bubble_sort.hpp  insertion_sort.hpp  quick_sort.hpp  selection_sort.hpp  sorting_test.cpp
algorithms/theory/: count_operations.hpp  instrumented.cpp  instrumented.hpp  instrumented_test.cpp
apps/datagen/: README.md  main.cpp
apps/datagen/include/: args.hpp  random.hpp
leetcode/codeforces/: cf_39j.cpp
leetcode/leetcode/: longest_palindrome_substring.cpp  median_two_sorted_arrays.cpp
library_example/: app.cpp  bar.cpp  clean.sh  foo.cpp  lib.h  make.sh
shorts/: assert.cpp  attributes.cpp  cast.cpp  compile.sh  conditions.cpp  const.cpp  enum.cpp  exceptions.cpp  functions.cpp  hello.cpp  inheritance.cpp  initialization.cpp  lambda.cpp  locale.cpp  loops.cpp  namespaces.cpp  operator_overloading.cpp  random.cpp  random_normal_dist.cpp  static.cpp  stream.cpp  stringstream.cpp  templates.cpp  templates_class.cpp  time.cpp  time_duration.cpp  tuple.cpp  types.cpp  varargs.cpp  vector.cpp
shorts/algorithms/: mapping.cpp  reduce.cpp  search.cpp
shorts/containers/: any.cpp  array.cpp  bitset.cpp  deque.cpp  iterators.cpp  list.cpp  map.cpp  multimap.cpp  priority_queue.cpp  set.cpp  tuple.cpp  unordered_map.cpp  vector.cpp
shorts/multithreading/: threads.cpp  threads_async.cpp  threads_future.cpp
shorts/object_oriented/: classes.cpp  classes_inheritance.cpp  friends.cpp  struct_init.cpp
shorts/pointers/: function_pointers.cpp  pointers.cpp  reference_to_pointer.cpp  references.cpp  rvalue_references.cpp  smart_pointers.cpp
shorts/std_algorithms/: generate.cpp  mapping.cpp  reduce.cpp  search.cpp
shorts/streams/: bidirectional_stream.cpp  cin.cpp  cout.cpp  stream_positioning.cpp
shorts/strings/: char.cpp  regex.cpp  string.cpp  string_conversion.cpp  string_view.cpp
shorts/types_and_initialization/: alias.cpp  auto.cpp  decltype.cpp  literals.cpp  shadowing.cpp  types.cpp
snippets/: CMakeLists.txt  README.md
snippets-2x/: CMakeLists.txt  README.md  arithmetic.cpp  structs.cpp
snippets-2x/src/: arithmetic.cpp  cast.cpp  concepts_custom.cpp  control_statements.cpp  functions.cpp  strings.cpp  structs.cpp
snippets/container_algorithms/: container_algorithms.cpp  search.cpp
snippets/containers/: any.cpp  array.cpp  bitset.cpp  deque.cpp  list.cpp  map.cpp  multimap.cpp  optional.cpp  pair.cpp  priority_queue.cpp  set.cpp  tuple.cpp  unordered_map.cpp  vector.cpp
snippets/core_language/: assert.cpp  attributes.cpp  cast.cpp  control_statements.cpp  functions.cpp  initialization.cpp  iterators.cpp  namespaces.cpp  variables.cpp
snippets/functional/: functions.cpp  functor.cpp  lambda.cpp  mapping.cpp  reduce.cpp  search.cpp
snippets/multithreading/: threads.cpp  threads_async.cpp  threads_future.cpp
snippets/numbers/: arithmetic.cpp  random.cpp  time_duration.cpp
snippets/object_oriented/: classes.cpp  classes_inheritance.cpp  classes_ref_methods.cpp  enums.cpp  friends.cpp  operator_overloading.cpp  struct_init.cpp  structs.cpp
snippets/pointers/: function_pointers.cpp  pointers.cpp  references.cpp  smart_pointers.cpp
snippets/std_algorithms/: generate.cpp  search.cpp
snippets/streams/: bidirectional_stream.cpp  cin.cpp  file_stream.cpp  input_stream.cpp  stream_low_level.cpp  stream_modifiers.cpp  stream_positioning.cpp  stream_types.cpp  streams.cpp
snippets/strings/: c_string.cpp  char.cpp  regex.cpp  string.cpp  string_conversion.cpp  string_view.cpp  stringstream.cpp
snippets/system/: files.cpp
snippets/templates/: concepts.cpp  concepts_custom.cpp  if_constexpr.cpp  templates.cpp  templates_class.cpp  templates_variadic.cpp
testing/ex-googletest/: README.md
testing/ex-googletest/src/: temp_conversion.hpp
testing/ex-googletest/tests/: Makefile  celsius_to_fahrenheit_test.hpp  main.cpp
testing/ex-libunittest/: README.md
testing/ex-libunittest/src/: temp_conversion.hpp
testing/ex-libunittest/tests/: Makefile  celsius_to_fahrenheit_test.cpp
testing/ex-unittest++/: README.md
testing/ex-unittest++/tests/: Makefile  celsius_to_fahrenheit_test.hpp  main.cpp
theory/: instrumented.cpp  instrumented.hpp  regular_type.hpp
